logs/Slang/generic/typedef/typedef_test_23.sv.log
name: typedef_test_23
description: Test
should_fail: 0
tags: 6.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_23.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/typedef/typedef_test_23.sv:7:14: error: unknown class or package 'yourpkg'
typedef enum yourpkg::num_t {
             ^~~~~~~
